--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -248,7 +248,7 @@
   }
 
   div.search{
-    background: white;
+    background: white!important;
   }
 }
 
@@ -264,10 +264,10 @@
 
 .full-width .close-search{
   background: white url("../../assets/images/close.svg") center no-repeat;
-  background-size: 25px;
-  width: 25px;
-  height: 25px;
-  padding: 0 10px 10px 10px;
+  background-size: 22px;
+  width: 22px;
+  height: 22px;
+  padding: 0 0px 10px 10px;
   position: absolute;
   top: -50px;
   right: 50px;
@@ -277,9 +277,9 @@
   });
   .breakpoint-huge-down({
     background: @dark-color url("../../assets/images/close_white.svg") center no-repeat;
-    background-size: 25px;
-    width: 25px;
-    height: 25px;
+    background-size: 22px;
+    width: 22px;
+    height: 22px;
     padding: 0 0px 10px 10px;
     position: absolute;
     top: 20px;
@@ -305,7 +305,7 @@
     .breakpoint-huge-down({
       max-width: 70%;
       float: unset;
-      margin: 40% auto;
+      margin: 30% auto;
     });
   }
 
@@ -461,7 +461,7 @@ nav .pr.p-search.large.search-btn{
     width: 100vw;
     height: 100vh;
     margin: -35px 0 0 -100vw;
-    padding: 50px 0 0 61px;
+    padding: 60px 0 0 61px;
     background-color: @dark-color;
     color: @white-color!important;
     font-size: 28px!important;
@@ -480,7 +480,7 @@ nav .pr.p-search.large.search-btn{
 
   #menu li
   {
-    margin: 24px  0 0 0;
+    margin: 12px 0;
     transition-delay: 2s;
     text-align: center;
   }
@@ -530,12 +530,12 @@ nav .pr.p-search.large.search-btn{
 
 .nav-item.search_field{
   a{
-    .breakpoint-large-down({
-      margin: 0px auto 20px auto;
+    .breakpoint-huge-down({
+      margin: 0px auto;
       background: url('../../assets/images/search_white.svg') center no-repeat;
       background-size: cover;
-      width: 52px;
-      height: 52px;
+      width: 40px;
+      height: 40px;
       display: block;
     });
   }
